Ignore compiled Python files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 notebooks/.ipynb_checkpoints/sklearn-examples-checkpoint.ipynb
+src/__pycache__/__init__.cpython-39.pyc
+src/models/__pycache__/__init__.cpython-39.pyc
